[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iv_surface"
version = "1.0.0"
description = "Implied volatility surface library with C++ engine and Streamlit dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["options", "implied-volatility", "SABR", "SSVI", "finance", "quant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "plotly>=5.0",
    "streamlit>=1.30",
    "yfinance>=0.2",
]

[project.urls]
Repository = "https://github.com/harryho71/iv-surface"
Issues = "https://github.com/harryho71/iv-surface/issues"

[tool.setuptools.packages.find]
where = ["src/python"]
